# computer-hardware-components

./: .gitignore  CMakeLists.txt  README.md  make.bat
app-b/: main_window.hpp
app-c/: CMakeLists.txt
app_a/: CMakeLists.txt  main_window.cpp  main_window.ui
app_b/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
app_c/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
include/: CMakeLists.txt
include/shared_data/: CMakeLists.txt  shared_data.cpp  shared_data.hpp
include/shared_memory/: CMakeLists.txt  shared_memory.cpp  shared_memory.hpp
src/: CMakeLists.txt
src/app-a/: CMakeLists.txt  app_a.cpp  app_a_window.cpp  app_a_window.hpp  app_a_window_ui.h  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
src/app-b/: CMakeLists.txt  app_b.cpp  app_b_window.cpp  app_b_window.hpp  app_b_window_ui.h  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
src/app-c/: CMakeLists.txt  app_c.cpp  app_c_window.cpp  app_c_window.hpp  app_c_window_ui.h  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
src/app_a/: CMakeLists.txt  app_a.cpp  app_a_window.cpp  app_a_window.hpp
src/app_b/: CMakeLists.txt  app_b.cpp  app_b_window.cpp  app_b_window.hpp
src/app_c/: CMakeLists.txt  app_c.cpp  app_c_window.cpp  app_c_window.hpp  beep_thread.cpp  beep_thread.hpp
